# aha-voice

./: Cargo.toml  README.md  README.zh-CN.md
examples/: asr_beginner.rs  cpal_in_beginner.rs  cpal_out_beginner.rs  llm_beginner.rs  tts_beginner.rs  vad_beginner.rs
src/: lib.rs  main.rs
src/asr/: mod.rs
src/audio/: aec.rs  input.rs  mod.rs  output.rs
src/llm/: mod.rs
src/pipeline/: message.rs
src/tts/: mod.rs
src/utils/: mod.rs
src/vad/: mod.rs
